Update scrollbar width and fix overflow issue in Filters components

--- a/src/pages/Home/components/Filters/components/Box/style.scss
+++ b/src/pages/Home/components/Filters/components/Box/style.scss
@@ -6,12 +6,17 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   padding: 20px;
   max-height: 180px;
-  overflow-y: auto;
+  // overflow-y: auto;
   .box-title {
     position: absolute;
     top: -20px;
     left: 0px;
     font-size: 12px;
     color: #333333b2;
+  }
+  .overFlow-container {
+    overflow-y: auto;
+    height: 100px;
+    margin-top: 20px;
   }
 }
