--- a/src/pages/Home/components/Filters/components/Brands/style.scss
+++ b/src/pages/Home/components/Filters/components/Brands/style.scss
@@ -1,5 +1,4 @@
 .checkbox-vertical {
   display: flex;
   flex-direction: column;
-  margin-top: 15px;
 }
